--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -31,8 +31,13 @@
     enabled: no
 
 - name: Create symlinks for PostgreSQL binaries (wildcard version)
-  command: ln -sf /usr/lib/postgresql/{{ pg_version }}/bin/* /usr/sbin/
-  warn: no  # Suppress warning about using command instead of file module
+  command: ln -s /usr/lib/postgresql/*/bin/* /usr/bin/
+  ignore_errors: true
+  no_log: true
+  args:
+    warn: false
+  
+
 
 - name: Create Patroni data directory
   file:
@@ -42,6 +47,7 @@
     group: postgres
     mode: '0700'
 
+
 - name: Configure Patroni
   template:
     src: patroni.yml.j2
@@ -50,19 +56,38 @@
     group: postgres
     mode: '0644'
 
-- name: Save generated passwords
+- name: set random password for patroni users
+  set_fact:
+    patroni_super_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,hexdigits') }}"
+    patroni_repl_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,hexdigits') }}"
+  when: patroni_super_user_pass is not defined or patroni_repl_user_pass is not defined
+
+
+- name: Save Patroni credentials to file (run once)
   copy:
     content: |
       patroni_super_user_pass: {{ patroni_super_user_pass }}
       patroni_repl_user_pass: {{ patroni_repl_user_pass }}
-    dest: /etc/patroni/credentials.yml
+    dest: /tmp/patroni-credentials.yml
     owner: postgres
     group: postgres
-    mode: 0600
-  when: inventory_hostname in groups['postgres']
+    mode: '0600'
   run_once: true
   delegate_to: "{{ groups['postgres'][0] }}"
 
+
+
+- name: Read Patroni credentials file
+  slurp:
+    src: /tmp/patroni-credentials.yml
+  register: patroni_creds_raw
+  delegate_to: "{{ groups['postgres'][0] }}"
+  run_once: true
+
+- name: Set Patroni password facts
+  set_fact:
+    patroni_super_user_pass: "{{ (patroni_creds_raw.content | b64decode | from_yaml).patroni_super_user_pass }}"
+    patroni_repl_user_pass: "{{ (patroni_creds_raw.content | b64decode | from_yaml).patroni_repl_user_pass }}"
 
 - name: Configure Patroni service
   template:
