--- a/playbook.yml
+++ b/playbook.yml
@@ -59,18 +59,6 @@
       pause:
         seconds: 10
 
-    - name: Check etcd health
-      shell: |
-       etcdctl --endpoints=http://{{ ansible_default_ipv4.address }}:2379 endpoint health
-      register: etcd_health
-      changed_when: false
-      ignore_errors: true
-      when: "'etcd' in group_names"
-
-    - name: Display etcd health
-      debug:
-        var: etcd_health.stdout_lines
-      when: etcd_health is defined
       
     - name: Get etcd member list
       command: etcdctl --endpoints=http://{{ ansible_default_ipv4.address }}:2379 member list
@@ -86,12 +74,11 @@
 
     - name: Check HAProxy stats page
       uri:
-        url: http://localhost:{{ haproxy_stat_port | default('8404') }}
+        url: http://localhost:{{ haproxy_stat_port }}
         return_content: yes
       register: haproxy_status
       changed_when: false
       ignore_errors: true
-      when: "'haproxy' in group_names"
 
     - name: Display HAProxy status
       debug:
@@ -103,7 +90,7 @@
       register: vip_check
       changed_when: false
       ignore_errors: true
-      when: "'haproxy' in group_names"
+      when: haproxy_status is defined 
 
     - name: Display VIP status
       debug:
@@ -115,7 +102,7 @@
         name: patroni
       register: patroni_status
       ignore_errors: true
-      when: "'postgres' in group_names"
+      when: group:names | intersect(['postgres']) | length > 0
 
     - name: Display Patroni service state
       debug:
