--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -51,7 +51,7 @@
 
 
 - name: Save Patroni credentials to file (run once)
-  file:
+  copy:
     content: |
       patroni_super_user_pass: {{ patroni_super_user_pass }}
       patroni_repl_user_pass: {{ patroni_repl_user_pass }}
@@ -59,8 +59,7 @@
     owner: root
     group: root
     mode: '0600'
-    deligate_to: localhost
-
+  delegate_to: localhost
 
 - name: Read Patroni credentials file
   slurp:
