--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -33,10 +33,10 @@
 - name: Create PostgreSQL data directory and set permissions  
   become: yes
   shell: |
-    sudo ln -s /usr/lib/postgresql/{{ pg_version }}/bin/* /usr/bin/ > /dev/null 2>&1 || true
-    sudo mkdir -p {{ patroni_data_dir }} >  /dev/null 2>&1 || true
-    sudo chown postgres:postgres {{ patroni_data_dir }}
-    sudo chmod 700 {{ patroni_data_dir }}
+     ln -s /usr/lib/postgresql/{{ pg_version }}/bin/* /usr/bin/ > /dev/null 2>&1 || true
+     mkdir -p {{ patroni_data_dir }} >  /dev/null 2>&1 || true
+     chown postgres:postgres {{ patroni_data_dir }}
+     chmod 700 {{ patroni_data_dir }}
     
 
 
