--- a/playbook.yml
+++ b/playbook.yml
@@ -115,7 +115,7 @@
         name: patroni
       register: patroni_status
       ignore_errors: true
-      when: "'postgres' in group_names"
+      when: inventory_hostname in groups['postgres']
 
     - name: Display Patroni service state
       debug:
