--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -43,11 +43,11 @@
 
 
 - name: set random password for patroni users
+  no_log: true
   set_fact:
     patroni_super_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,hexdigits') }}"
     patroni_repl_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,hexdigits') }}"
   when: patroni_super_user_pass is not defined or patroni_repl_user_pass is not defined
-  sensitive: true
 
 
 
