--- a/playbook.yml
+++ b/playbook.yml
@@ -84,9 +84,7 @@
       when: etcd_members is defined and inventory_hostname in groups['etcd']
 
     - name: Check HAProxy stats page
-      uri:
-        url: http://localhost:{{ haproxy_stat_port | default('8404') }}
-        return_content: yes
+      command: curl -I http://{{ ansible_default_ipv4.address }}:{{ haproxy_stats_port }} 
       register: haproxy_status
       changed_when: false
       ignore_errors: true
