--- a/inventory.ini
+++ b/inventory.ini
@@ -12,3 +12,8 @@ etcd ansible_host=10.132.0.20
 etcd 
 postgres 
 haproxy
+
+[all:vars]
+ansible_user=momamdouh974
+ansible_ssh_private_key_file=~/.ssh/id_rsa
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
