--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -42,15 +42,35 @@
 
 
 
-- name: set random password for patroni users
-  no_log: true
-  set_fact:
-    patroni_super_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,hexdigits') }}"
-    patroni_repl_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits,hexdigits') }}"
-  when: patroni_super_user_pass is not defined or patroni_repl_user_pass is not defined
+- name: Check if Patroni credentials file exists (run once)
+  stat:
+    path: /tmp/patroni-credentials.yml
+  register: patroni_creds_file
+  delegate_to: localhost
   run_once: true
 
+- name: Read Patroni credentials file
+  slurp:
+    src: /tmp/patroni-credentials.yml
+  register: patroni_creds_raw
+  delegate_to: localhost
+  run_once: true
+  when: patroni_creds_file.stat.exists
 
+- name: Set Patroni password facts from file
+  set_fact:
+    patroni_super_user_pass: "{{ (patroni_creds_raw.content | b64decode | from_yaml).patroni_super_user_pass }}"
+    patroni_repl_user_pass: "{{ (patroni_creds_raw.content | b64decode | from_yaml).patroni_repl_user_pass }}"
+  no_log: true
+  when: patroni_creds_file.stat.exists
+
+- name: Generate Patroni passwords and save to file (run once)
+  set_fact:
+    patroni_super_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits') }}"
+    patroni_repl_user_pass: "{{ lookup('password', '/dev/null length=16 chars=ascii_letters,digits') }}"
+  no_log: true
+  when: not patroni_creds_file.stat.exists
+  run_once: true
 
 - name: Save Patroni credentials to file (run once)
   copy:
@@ -62,22 +82,8 @@
     group: root
     mode: '0600'
   delegate_to: localhost
-
-- name: Read Patroni credentials file
-  slurp:
-    src: /tmp/patroni-credentials.yml
-  register: patroni_creds_raw
-  delegate_to: localhost
+  when: not patroni_creds_file.stat.exists
   run_once: true
-  when: patroni_creds_raw is not defined or patroni_creds_raw.content is not defined
-  
-
-- name: Set Patroni password facts
-  set_fact:
-    patroni_super_user_pass: "{{ (patroni_creds_raw.content | b64decode | from_yaml).patroni_super_user_pass }}"
-    patroni_repl_user_pass: "{{ (patroni_creds_raw.content | b64decode | from_yaml).patroni_repl_user_pass }}"
-  no_log: true
-  when: patroni_creds_raw is defined and patroni_creds_raw.content is defined
 
 
 - name: Configure Patroni
