--- a/inventory.ini
+++ b/inventory.ini
@@ -1,12 +1,12 @@
 [etcd] 
-etcd ansible_host=10.132.0.21
+etcd01 ansible_host=10.132.0.25
  
 [postgres] 
-psgr01 ansible_host=10.132.0.22
-psgr02 ansible_host=10.132.0.23
+pgr01 ansible_host=10.132.0.26
+pgr02 ansible_host=10.132.0.24
  
 [haproxy] 
-etcd ansible_host=10.132.0.21
+etcd01 ansible_host=10.132.0.25
  
 [all:children] 
 etcd 
