--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,19 @@
 [etcd] 
-etcd ansible_host=10.132.0.2 
+etcd01 ansible_host=10.132.0.25
  
 [postgres] 
-psgr01 ansible_host=10.132.0.3 
-psgr02 ansible_host=10.132.0.4
+pgr01 ansible_host=10.132.0.26
+pgr02 ansible_host=10.132.0.24
  
 [haproxy] 
-etcd ansible_host=10.132.0.2
+etcd01 ansible_host=10.132.0.25
  
 [all:children] 
 etcd 
 postgres 
 haproxy
+
+[all:vars]
+ansible_user=momamdouh974
+ansible_ssh_private_key_file=~/.ssh/id_rsa
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
